# ARTOLC

./: CMakeLists.txt  Epoche.cpp  Key.h  N.cpp  N.h  Tree.cpp  a.out  main.cpp  main_omp.cpp
